// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeFunction > async functions > analyzeFunction(async (a) => { return a + 1; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'return a + 1;',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > async functions > analyzeFunction(async (a) => a + 1) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'a + 1',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > async functions > analyzeFunction(async function f(a) { return a + 1; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'return a + 1;',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > async functions > analyzeFunction(async function f2(a) { return a + 1; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'return a + 1;',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > body extraction > analyzeFunction((a) => { const b = a + 1; const c = b * 2; return c; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'const b = a + 1;\\nconst c = b * 2;\\nreturn c;',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > body extraction > analyzeFunction((a) => { return a + 1; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'return a + 1;',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > body extraction > analyzeFunction((a) => a + 1) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'a + 1',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > body extraction > analyzeFunction(function f(a) { return a + 1; }) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'return a + 1;',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > error cases > analyzeFunction('not a function') 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN THROWS ERROR
Error: Could not extract groups from function.
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - destructured > analyzeFunction(({ a, b }) => [a, b]) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: '[a, b]',
  parameters: [
    {
      type: 'destructured',
      names: [ 'a', 'b' ]
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - destructured > analyzeFunction((a, { b, c }) => [ a, b, c ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: '[\\n\\ta,\\n\\tb,\\n\\tc\\n]',
  parameters: [
    {
      type: 'name',
      value: 'a'
    },
    {
      type: 'destructured',
      names: [ 'b', 'c' ]
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - destructured > analyzeFunction((a, { b, c }) => [a, b, c]) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: '[a, b, c]',
  parameters: [
    {
      type: 'name',
      value: 'a'
    },
    {
      type: 'destructured',
      names: [ 'b', 'c' ]
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - named > analyzeFunction(() => 42) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: '42',
  parameters: []
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - named > analyzeFunction((...args) => args) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'args',
  parameters: [
    {
      type: 'name',
      value: 'args'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - named > analyzeFunction((_a, __b) => _a) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: '_a',
  parameters: [
    {
      type: 'name',
      value: '_a'
    },
    {
      type: 'name',
      value: '__b'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - named > analyzeFunction((a) => a) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: 'a',
  parameters: [
    {
      type: 'name',
      value: 'a'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - named > analyzeFunction((a, b, c) => [ a, b, c ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: '[\\n\\t\\ta,\\n\\t\\tb,\\n\\t\\tc\\n\\t]',
  parameters: [
    {
      type: 'name',
      value: 'a'
    },
    {
      type: 'name',
      value: 'b'
    },
    {
      type: 'name',
      value: 'c'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`analyzeFunction > parameters - named > analyzeFunction((a, b, c) => [a, b, c]) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  body: '[a, b, c]',
  parameters: [
    {
      type: 'name',
      value: 'a'
    },
    {
      type: 'name',
      value: 'b'
    },
    {
      type: 'name',
      value: 'c'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;
